--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -453,7 +453,7 @@
             </section><!-- /.Section benefit -->
 
              <!-- Section service 2-->
-            <section class="s-service-2 relative overflow-hidden">
+            <section class="s-service-2 relative overflow-hidden" id="product-section">
                 <div class="content-section">
                     <div class="heading-section style-2">
                         <div class="img-item">
