--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -163,12 +163,16 @@
                                 <li class="item has-child">  
                                     <a href="#benefit-section">Benefits</a>
                                 </li>
+                                <li class="item has-child">
+                                    <a href="#product-section">Products</a>
+                                </li>
                                 <li class="item has-child">  
                                     <a href="#testimonia-section">Testimonials</a>
                                 </li>
                                 <li class="item has-child">
                                     <a href="#FAQ-section">FAQ</a>
                                 </li>
+                                
                                 <li class="item has-child">
                                     <a href="#blog-section">Blogs</a>
                                 </li>
@@ -236,11 +240,15 @@
                                         </a>
                                     </li>
                                     <li class="menu-item menu-item-has-children-mobile">
+                                        <a class="item-menu-mobile" href="#product-section">Products
+                                    </li>
+                                    <li class="menu-item menu-item-has-children-mobile">
                                         <a class="item-menu-mobile" href="#testimonia-section">Testimonials
                                     </li>
                                     <li class="menu-item menu-item-has-children-mobile">
                                         <a class="item-menu-mobile" href="#FAQ-section">FAQ
                                     </li>
+                                    
                                     <li class="menu-item menu-item-has-children-mobile">
                                         <a class="item-menu-mobile" href="#blog-section">Blogs
                                     </li>
@@ -327,6 +335,10 @@
                                     </li>
                                     <li class="item has-child">
                                         <a href="#benefit-section">Benefits</a>
+                                    </li>
+
+                                    <li class="item has-child">
+                                        <a href="#product-section">Products</a>
                                     </li>
                                     <li class="item has-child">
                                         <a href="#testimonia-section">Testimonials</a>
