--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -666,18 +666,18 @@
                     </div>
                 </div>
 
-                <div class="s-img-item item-1">
+                {% comment %} <div class="s-img-item item-1">
                     <img src="{% static 'web/assets/images/item/brown-top.png' %}" alt="" />
-                </div>
+                </div> {% endcomment %}
                 <div class="s-img-item item-2 zoomIn wow">
                     <div class="scroll-element-4">
 
                         <img src="{% static 'web/assets/images/item/tructor.png' %}" alt="" />
                     </div>
                 </div>
-                <div class="s-img-item item-bottom">
+                {% comment %} <div class="s-img-item item-bottom">
                     <img src="{% static 'web/assets/images/item/brown-bottom.png' %}" alt="" />
-                </div>
+                </div> {% endcomment %}
             </section><!-- /.Section counter -->
 
             <!-- Section faq -->
@@ -775,9 +775,9 @@
                     <div class="s-img-item item-2 wow zoomIn">
                         <img src="{% static 'web/assets/images/item/windmill.png' %}" alt="" />
                     </div>
-                    <div class="s-img-item item-3">
+                    {% comment %} <div class="s-img-item item-3">
                         <img src="{% static 'web/assets/images/item/green.png' %}" alt="" />
-                    </div>
+                    </div> {% endcomment %}
                 </div>
 
                 <div class="slider-side">
