--- a/templates/web/blog-details.html
+++ b/templates/web/blog-details.html
@@ -22,7 +22,7 @@
                             <img src="{% static 'web/assets/images/item/line-throw-title.png' %}" alt="">
                         </div>
                         <div class="breadcrumb">
-                            <a href="index.html">Home</a>
+                            <a href="{% url "web:index" %}">Home</a>
                             <div class="icon">
                                 <i class="icon-arrow-right1"></i>
                             </div>
