--- a/static/web/assets/css/styles.css
+++ b/static/web/assets/css/styles.css
@@ -27,7 +27,7 @@
   --Text: #6e7673;
   --Text-2: #072010;
   --Text-3: #eeeeee;
-  --Text-4: #278d45;
+  --Text-4: #1B3B09;
   --Text-5: #222222;
   --Text-6: #ededed;
   --Text-7: #093416;
