--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -452,7 +452,7 @@
                 </div>
             </section><!-- /.Section benefit -->
 
-             <!-- Section service 2-->
+             <!-- Section Product -->
             <section class="s-service-2 relative overflow-hidden" id="product-section">
                 <div class="content-section">
                     <div class="heading-section style-2">
@@ -524,7 +524,7 @@
                         </div>
                     </div>
                 </div>
-            </section><!-- /.Section service -->
+            </section><!-- /.Section Product -->
 
             <!-- Section testimonial 3 -->
             <section class="s-testimonial-3 overflow-hidden" id="testimonia-section">
